Add tests for projects_controller
